added admin boolean to Users for suture use. fixed User form to apply bcrypt. git commit rhymes.

--- a/test/fixtures/flights.yml
+++ b/test/fixtures/flights.yml
@@ -2,14 +2,16 @@
 
 one:
   number: MyString
-  date: 2016-12-13
+  date: 2016-12-14
   destination: MyString
   departure: MyString
+  duration: MyText
   airplane_id: 1
 
 two:
   number: MyString
-  date: 2016-12-13
+  date: 2016-12-14
   destination: MyString
   departure: MyString
+  duration: MyText
   airplane_id: 1
